some spring boot 4 fixes